# pysight

./: autocorrelation.py  main.py  pyproject.toml  seasonal_plots.py  time_plots.py
chapter_2/2.2/: time_plots.py
chapter_2/2.4/: seasonal_plots.py
chapter_5/5.2/: some_simple_forecasting_methods.py
pysight/: __init__.py  helper.py
pysight/chapter_1/: __init__.py
pysight/chapter_1/section_1_1/: __init__.py  tsibble_objects.py
pysight/chapter_2/section_2_2/: time_plots.py
pysight/chapter_2/section_2_4/: seasonal_plots.py
pysight/chapter_2/section_2_8/: __init__.py
pysight/chapter_3/: __init__.py
pysight/chapter_3/section_3_2/: __init__.py  time_series_components.py
pysight/chapter_3/section_3_6/: stl_decomposition.py
pysight/chapter_4/section_4_2/: acf_features.py
pysight/chapter_5/section_5_1/: a_tidy_forecasting_workflow.py
pysight/chapter_5/section_5_2/: some_simple_forecasting_methods.py
pysight/fpp3/: __init__.py
pysight/fpp3/chapter_1/: __init__.py
pysight/fpp3/chapter_1/section_1_1/: tsibble_objects.py
pysight/fpp3/chapter_2/: __init__.py
pysight/fpp3/chapter_2/section_2_2/: __init__.py
pysight/fpp3/chapter_2/section_2_4/: __init__.py
pysight/fpp3/chapter_3/section_3_2/: time_series_components.py
pysight/fpp3/chapter_3/section_3_6/: stl_decomposition.py
pysight/fpp3/chapter_4/: __init__.py
pysight/fpp3/chapter_4/section_4_2/: __init__.py  acf_features.py
pysight/fpp3/chapter_5/section_5_1/: __init__.py  a_tidy_forecasting_workflow.py
pysight/src/pysight/: __init__.py  helpers.py
(+12 files in other folders)
