[tool.poetry]
name = "pysight"
version = "0.1.0"
description = ""
authors = ["Seth Hobbes"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pytest = ">=7.4.3"
pandas = ">=2.1.4"
numpy = ">=1.26.2"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"